--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "devDependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.4.5",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "html-webpack-plugin": "^5.5.3"
+    "webpack-dev-server": "^5.0.4"
   }
 }
